[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
async-trait = "0.1.89"
atoi = "2.0.0"
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.49.0", features = ["full"] }
